--- a/slider.css
+++ b/slider.css
@@ -9,7 +9,7 @@
 body {
     text-align: center;
     justify-content: center;
-    /* background-image: url('/background.jpeg'); */
+     background-image: url('/background.jpeg'); 
     background-repeat: no-repeat;
     overflow-x: hidden;
 
